
= 2009/03/05

Test improvements from Dave Mitchel sent back in 2005...

Added code to increase $columns if it's not big enough to accommodate
the subsequent tab.

Minor documentation fixes from David Landgren <david at landgren.net>.

Use warnings::warnif instead of just warn for columns < 2.  Appled per
request of Rafael Garcia-Suarez <rgarciasuarez at gmail.com>.

= 2006/11/17

Text::Tabs can handle newlines now so the BUGS section has been removed
per request from Aristotle Pagaltzis.

= 2006/07/11

Further bomb-proofing to pass more tests: Dan Jacobson <jidanni at 
jidanni dot org> found another way to generate a "this shouldn't happen".

= 2006/07/05 

Made documentation and code changes to address perlbug:
https://rt.perl.org/rt3/Ticket/Display.html?id=30229

Added in changes from the distributed-with-perl version.  This took 
care of perlbug: https://rt.perl.org/rt3/Ticket/Display.html?id=34902
It also took care of suggestion from Matthijs Bomhoff <matthijs
at bomhoff dot nl>.

Made documentation changes (added EXAMPLES) as per a suggestion
from Gabor Blasko <gblasko at cs dot columbia dot edu>

belg4mit at MIT dot EDU reported that $columns==1 die'd.  No longer.

Added tests for each bug report.

= 2005/08/24

Added $separator2 and tests for $separator and $separator2

Aristotle Pagaltzis <pagaltzis at gmx.de> contributed a new version of
expand() that is faster.

Jarkko Hietaniemi <jhi at cc.hut.fi> sent in perl change #17917 which
fixed a bug in wrap.

Matthew Durante <matthew_durante at hotmail.com> and 
Don Buchholz <don at truedisk.com> sent in a doc patches.

= 2001/09/29

Philip Newton <Philip.Newton at gmx.net> sent in a clean patch that
added support for defining words differently; that prevents 
Text::Wrap from untainting strings; and that fixes a documentation
bug.

So that fill.t can be used in the version included in the perl
distribution, fill.t no longer uses File::Slurp.

Both Sweth Chandramouli <svc at sweth.net> and Drew Degentesh 