@@ -7,14 +7,21 @@ require Exporter;
 @EXPORT = qw(expand unexpand $tabstop);
 
 use vars qw($VERSION $tabstop $debug);
-$VERSION = 2009.0305;
+$VERSION = 2009.0417;
 
 use strict;
+
+use 5.010_000;
 
 BEGIN	{
 	$tabstop = 8;
 	$debug = 0;
 }
+
+my $CHUNK = qr/\X/;
+
+sub _xlen (_) { scalar(() = $_[0] =~ /$CHUNK/g) } 
+sub _xpos (_) { _xlen( substr( $_[0], 0, pos($_[0]) ) ) }
 
 sub expand {
 	my @l;
@@ -24,10 +31,13 @@ sub expand {
 		for (split(/^/m, $_, -1)) {
 			my $offs = 0;
 			s{\t}{
-				$pad = $tabstop - (pos() + $offs) % $tabstop;
+			    # this works on both 5.10 and 5.11
+				$pad = $tabstop - (_xlen(${^PREMATCH}) + $offs) % $tabstop;
+			    # this works on 5.11, but fails on 5.10
+				#XXX# $pad = $tabstop - (_xpos() + $offs) % $tabstop;
 				$offs += $pad - 1;
 				" " x $pad;
-			}eg;
+			}peg;
 			$s .= $_;
 		}
 		push(@l, $s);
@@ -44,12 +54,12 @@ sub unexpand
 	my $line;
 	my @lines;
 	my $lastbit;
-	my $ts_as_space = " "x$tabstop;
+	my $ts_as_space = " " x $tabstop;
 	for $x (@l) {
 		@lines = split("\n", $x, -1);
 		for $line (@lines) {
 			$line = expand($line);
-			@e = split(/(.{$tabstop})/,$line,-1);
+			@e = split(/(${CHUNK}{$tabstop})/,$line,-1);
 			$lastbit = pop(@e);
 			$lastbit = '' 
 				unless defined $lastbit;
@@ -91,7 +101,7 @@ sub expand
 
 =head1 NAME
 
-Text::Tabs -- expand and unexpand tabs per the unix expand(1) and unexpand(1)
+Text::Tabs - expand and unexpand tabs like Unix expand(1) and unexpand(1)
 
 =head1 SYNOPSIS
 
@@ -103,11 +113,17 @@ Text::Tabs -- expand and unexpand tabs per the unix expand(1) and unexpand(1)
 
 =head1 DESCRIPTION
 
-Text::Tabs does about what the unix utilities expand(1) and unexpand(1) 
-do.  Given a line with tabs in it, expand will replace the tabs with
+Text::Tabs does most of what the Unix utilities expand(1) and unexpand(1) 
+do.  Given a line with tabs in it, C<expand> replaces those tabs with
 the appropriate number of spaces.  Given a line with or without tabs in
-it, unexpand will add tabs when it can save bytes by doing so (just
-like C<unexpand -a>).  Invisible compression with plain ASCII! 
+it, C<unexpand> adds tabs when it can save bytes by doing so, 
+like the C<unexpand -a> command.  
+
+Unlike the old Unix utilities, this module correctly accounts for
+any Unicode combining characters (such as diacriticals) that may occur
+in each line for both expansion and unexpansion.  These are overstrike
+characters that do not increment the logical position.  Make sure
+you have the appropriate Unicode settings enabled.
 
 =head1 EXAMPLE
 
@@ -119,13 +135,19 @@ like C<unexpand -a>).  Invisible compression with plain ASCII!
     print unexpand $_;
   }
 
-Instead of the C<expand> comand, use:
+Instead of the shell's C<expand> comand, use:
 
   perl -MText::Tabs -n -e 'print expand $_'
 
-Instead of the C<unexpand -a> command, use:
+Instead of the shell's C<unexpand -a> command, use:
 
   perl -MText::Tabs -n -e 'print unexpand $_'
+
+=head1 BUGS
+
+Text::Tabs handles only tabs (C<"\t">) and combining characters (C</\pM/).  It doesn't
+count backwards for backspaces (C<"\t">), omit other non-printing control characters (C</\pC/>),
+or otherwise deal with any other zero-, half-, and full-width characters.
 
 =head1 LICENSE
 
